# app-template-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.toml
containers/postgres/: db_create.sql  db_seed.sql  psql_history
migrations/: env.py
migrations/versions/: 2ab12fbd5ff4_seed.py  6b0fab9d4234_init.py  d26fafd3a01b_seed_sample_data.py  ec5ddda825ce_create_schema.py
src/sgerbwd/: __init__.py  app.py  db.py  json.py  models.py  settings.py  views.py
tests/: test_app.py
